style.css
body {
  font-family: 'Libre Baskerville';
  background-color: #E0FFFF;
}


h1 {
  color: #2B65EC;
  font-size: 36px;
  margin-bottom: 8px;
}
h2 {
  font-family: 'Abhaya Libre';
  font-size: 21px;
  margin: 40px 0 8px 0;
  text-align: center;
  color: #151B54;
}
h3 {
  color: #5CB3FF;
  margin: 0;
  padding-top: 30px;
  font-size: 82px;
  text-align: center;
  text-shadow: 6px 4px 7px #2B3856;
}
h4 {
  font-size: 30px;
  color: #E0FFFF;
  padding-top: 40px;
  text-align: center;
  font-weight:100;
}
h5 {
  color: #48CCCD;
  font-family: 'Architects Daughter';
  font-weight: bold;
  font-size: 21px;
  text-align: center;
}
blockquote, p{
  font-family: FontAwesome;
  font-size: 20;
}
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #3BB9FF;
  width: 100%;
}
#navigationbar li {
  float: right;
}
li a {
  display: block;
  color: white;
  text-align: center;
  padding: 18px 18px;
  text-decoration: none;
}
li a:hover:not(.active){
  background-color: #1589FF;
}
#about li {
    float: center;
}
pre {
    font-family: 'sans-serif';
    font-size: 18px;
    font-color: #E0FFFF;
    background-color: #BDEDFF;
    border: #BDEDFF;
}
.active {
  background-color: #FDD017;
}
#line {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  height: 4px;
  background-color: #0066CC;
}
#home {
  background-image: url("images/banner.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}
#about {
  background-color: #BDEDFF;
  text-align: center;
  left: 0;
}
#photo {
  float: right;
  bottom: 0px;
  max-height: 100%;
  max-width: 100%;
}

#projects {
  text-align: center;
}

.project {
  flex: 0 0 140px;                /* No grow/shrink, 140px width */
  height: 500px;
  margin-bottom: 10px;
  background-color: #7AA3CC;
  transition: 0.2s background-color;
}
.project:hover {
  background-color: #0066CC;
}

.project-list {
    font-size: 0;
    font-family: Courier New;
}

.project-list a {
    display: inline-block;
    width: 33%;
    height: 50vh;
    position: relative;
}
@media screen and (max-width: 980px) {
    .project-list a {
        width:50%;
    }
    #photo {
        max-height: 400px;
        max-width: auto;
    }
}
@media screen and (max-width: 700px) {
    .project-list a {
        width:100%;
    }
    #photo {
        max-height: 300px;
        max-width: auto;
    }
}
.project-list a img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.project-list a:before, a:after {
    width: 100%;
    position: absolute;
    opacity: 0;
    transition: opacity 0.3s ease;
}

.project-list a:before {
    content: '';
    height: 100%;
    background: rgba(255,255,51,0.8);
}
.project-list a:after {
    content:attr(data-title);
    white-space: pre-wrap;
    top: calc(30% - 0.5em);
    font-size:20px;
    left: 0;
    text-align: center;
    color: #2B65EC;
}
.project-list a:first-line {
    font-size:26px;
}
.project-list a:hover:before,  a:hover:after {
    opacity: 1;
}
.project-list @media (max-width: 650px) {
    a {
        width: 50%;
        height: 100vh;
    }
}
.project-list @media (max-width: 480px) {
    a {
        width: 100%;
    }
}
.project {
  flex: 0 0 140px;                /* No grow/shrink, 140px width */
  height: 500px;
  margin-bottom: 10px;
  background-color: #7AA3CC;
  transition: 0.2s background-color;
}

#album {
  text-align: center;
  display: flex;                  /* Flex box */
  flex-direction: column;            /* Left to right */
  flex-wrap: wrap;                /* Wrap content */
  justify-content: space-between;
  background-color: #2B3856;
}


.subtext {
  color: white;
  text-align: center;
  font-style: italic;
}

